RESOLVED FIXED182433
Fix bug in MediaTime comparison for negative values with different scale.
https://bugs.webkit.org/show_bug.cgi?id=182433
Summary Fix bug in MediaTime comparison for negative values with different scale.
Alicia Boya García
Reported 2018-02-02 07:44:53 PST
Currently comparisons like MediaTime(-8, 10) >= MediaTime(-1, 1) return false, incorrectly as -0.8 >= -1.0.
Attachments
Patch (3.48 KB, patch)
2018-02-02 07:58 PST, Alicia Boya García
no flags
Alicia Boya García
Comment 1 2018-02-02 07:58:03 PST
WebKit Commit Bot
Comment 2 2018-02-05 01:14:14 PST
Comment on attachment 332967 [details] Patch Clearing flags on attachment: 332967 Committed r228089: <https://trac.webkit.org/changeset/228089>
WebKit Commit Bot
Comment 3 2018-02-05 01:14:15 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-02-05 01:15:32 PST
Note You need to log in before you can comment on or make changes to this bug.