Fix bug in MediaTime comparison for negative values with different scale. https://bugs.webkit.org/show_bug.cgi?id=182433

Source/WTF:

Reviewed by Xabier Rodriguez-Calvar.

* wtf/MediaTime.cpp:
(WTF::MediaTime::compare const):

Tools:

Improved test coverage for MediaTime::compare().

Reviewed by Xabier Rodriguez-Calvar.

* TestWebKitAPI/Tests/WTF/MediaTime.cpp:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/198273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228089 268f45cc-cd09-0410-ab3c-d52691b4dbfc